--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -3,8 +3,6 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
   workflow_dispatch:
 
 permissions:
@@ -29,6 +27,8 @@ jobs:
     
     - name: Configure Pages
       uses: actions/configure-pages@v4
+      with:
+        enablement: true
     
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
