--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -10,10 +10,6 @@ permissions:
   pages: write
   id-token: write
 
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -22,15 +18,14 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     
     steps:
-    - name: Checkout code
+    - name: Checkout
       uses: actions/checkout@v4
     
-    - name: Configure Pages
-      uses: actions/configure-pages@v4
-      with:
-        enablement: true
+    - name: Build and Deploy
+      run: |
+        echo "Preparing static files for deployment..."
     
-    - name: Upload artifact
+    - name: Upload Pages artifact
       uses: actions/upload-pages-artifact@v3
       with:
         path: '.'
@@ -38,3 +33,5 @@ jobs:
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v3
+      with:
+        timeout: 600000
